fix spacing of cards flexbox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,15 +42,14 @@ body {
   clear: both;
 }
 
-.container.fluid {
-  width: 100%;
-  max-width: 960px;
-  margin: 0 auto;
-  clear: both;
-}
 #main-container {
   padding-top: 130px;
   min-height: calc(100vh - 70px);
+}
+
+.cardContainer {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .work {
